add xlimit to some graphs

--- a/cellForeGround/templates/cellForeGround/app.html
+++ b/cellForeGround/templates/cellForeGround/app.html
@@ -196,11 +196,11 @@
                                                id="gp13" name="gp">
                                         <label class="custom-control-label" for="gp13">V0-t图</label>
                                     </div>
-                                    {#                                    <div class="custom-control custom-checkbox col-md-6">#}
-                                    {#                                        <input class="custom-control-input" type="checkbox" value="gp14"#}
-                                    {#                                               id="gp14" name="gp">#}
-                                    {#                                        <label class="custom-control-label" for="gp14">W0-t图</label>#}
-                                    {#                                    </div>#}
+                                    <div class="custom-control custom-checkbox col-md-6">
+                                        <input class="custom-control-input" type="checkbox" value="gp14"
+                                               id="gp14" name="gp">
+                                        <label class="custom-control-label" for="gp14">W0-t图</label>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -234,32 +234,6 @@
     <!-- Content Wrapper. Contains page content -->
     <div class="content-wrapper">
         <div id="content" class="content mycontent row">
-            {#            <div class="cellobj" id="cellobj1">#}
-            {#                <img src="{% static "cellForeGround/test/1.jpg" %}" class="cellimg" alt="图片">#}
-            {#                <img src="{% static "cellForeGround/test/1.jpg" %}" class="cellimg" alt="图片">#}
-            {#                <img src="{% static "cellForeGround/test/1.jpg" %}" class="cellimg" alt="图片">#}
-            {#                <img src="{% static "cellForeGround/test/1.jpg" %}" class="cellimg" alt="图片">#}
-            {#                <img src="{% static "cellForeGround/test/1.jpg" %}" class="cellimg" alt="图片">#}
-            {#                <img src="{% static "cellForeGround/test/1.jpg" %}" class="cellimg" alt="图片">#}
-            {#                <img src="{% static "cellForeGround/test/1.jpg" %}" class="cellimg" alt="图片">#}
-            {#                <img src="{% static "cellForeGround/test/1.jpg" %}" class="cellimg" alt="图片">#}
-            {#                <img src="{% static "cellForeGround/test/1.jpg" %}" class="cellimg" alt="图片">#}
-            {#                <img src="{% static "cellForeGround/test/1.jpg" %}" class="cellimg" alt="图片">#}
-            {#                <img src="{% static "cellForeGround/test/1.jpg" %}" class="cellimg" alt="图片">#}
-            {#                <img src="{% static "cellForeGround/test/1.jpg" %}" class="cellimg" alt="图片">#}
-            {#                <img src="{% static "cellForeGround/test/1.jpg" %}" class="cellimg" alt="图片">#}
-            {#                <img src="{% static "cellForeGround/test/1.jpg" %}" class="cellimg" alt="图片">#}
-            {#                <img src="{% static "cellForeGround/test/1.jpg" %}" class="cellimg" alt="图片">#}
-            {#                <img src="{% static "cellForeGround/test/1.jpg" %}" class="cellimg" alt="图片">#}
-            {#                <img src="{% static "cellForeGround/test/1.jpg" %}" class="cellimg" alt="图片">#}
-            {#                <img src="{% static "cellForeGround/test/1.jpg" %}" class="cellimg" alt="图片">#}
-            {#                <img src="{% static "cellForeGround/test/1.jpg" %}" class="cellimg" alt="图片">#}
-            {#                <img src="{% static "cellForeGround/test/1.jpg" %}" class="cellimg" alt="图片">#}
-            {#                <img src="{% static "cellForeGround/test/1.jpg" %}" class="cellimg" alt="图片">#}
-            {#                <img src="{% static "cellForeGround/test/1.jpg" %}" class="cellimg" alt="图片">#}
-            {#                <img src="{% static "cellForeGround/test/1.jpg" %}" class="cellimg" alt="图片">#}
-            {#                <img src="{% static "cellForeGround/test/1.jpg" %}" class="cellimg" alt="图片">#}
-            {#            </div>#}
 
         </div>
         <div id="popbox" class="content mycontent"></div>
